--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -15,8 +15,8 @@ on:
       - 'dev'
 
 # permissions are needed if pushing to ghcr.io
-permissions: 
-  packages: write
+# permissions: 
+#   packages: write
 
 jobs:
   build:
