--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,18 +1,18 @@
 name: Build
 
 # Controls when the workflow will run
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - 'main'
-      - 'dev'
-    tags:
-      - 'v*.*.*'
-  pull_request:
-    branches:
-      - 'main'
-      - 'dev'
+on: [workflow_dispatch, push]
+  # workflow_dispatch:
+  # push:
+  #   branches:
+  #     - 'main'
+  #     - 'dev'
+  #   tags:
+  #     - 'v*.*.*'
+  # pull_request:
+  #   branches:
+  #     - 'main'
+  #     - 'dev'
 
 # permissions are needed if pushing to ghcr.io
 # permissions: 
