--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,5 +1,23 @@
-name: Build Container
-on: [push]
+name: build container
+
+# Controls when the workflow will run
+on: 
+  workflow_dispatch:
+  push:
+    branches:
+      - 'main'
+      - 'dev'
+    tags:
+      - 'v*.*.*'
+  pull_request:
+    branches:
+      - 'main'
+      - 'dev'
+
+permissions are needed if pushing to ghcr.io
+permissions: 
+  packages: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,7 +38,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            <specify the image name>
+            vzlogger
           # Docker tags based on the following events/attributes
           tags: |
             type=schedule
@@ -36,5 +54,5 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm/v7
           #push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.<meta_id>.outputs.tags }}
-          labels: ${{ steps.<meta_id>.outputs.labels }}                    
+          tags: ${{ steps.vzmetaid.outputs.tags }}
+          labels: ${{ steps.vzmetaid.outputs.labels }} 
