--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -14,7 +14,7 @@ on:
       - 'main'
       - 'dev'
 
-permissions are needed if pushing to ghcr.io
+# permissions are needed if pushing to ghcr.io
 permissions: 
   packages: write
 
