--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,7 +1,17 @@
-name: build container
+name: build-container
 
 # Controls when the workflow will run
-on: [workflow_dispatch, push]
+on: 
+  workflow_dispatch:
+  push:
+    branches:
+      - 'master'
+    tags:
+      - 'v*.*.*'
+  pull_request:
+    branches:
+      - 'master'
+
 
 # permissions are needed if pushing to ghcr.io
 permissions: 
@@ -22,7 +32,7 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
       - name: Docker meta
-        id: vzmetaid # you'll use this in the next step
+        id: vz_meta_id # you'll use this in the next step
         uses: docker/metadata-action@v3
         with:
           # list of Docker images to use as base name for tags
@@ -41,7 +51,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/amd64,linux/arm/v7
+          #platforms: linux/amd64,linux/arm/v7
+          platforms: linux/arm64
           #push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.vzmetaid.outputs.tags }}
-          labels: ${{ steps.vzmetaid.outputs.labels }} 
+          tags: ${{ steps.vz_meta_id.outputs.tags }}
+          labels: ${{ steps.vz_meta_id.outputs.labels }} 
