--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,4 +1,4 @@
-name: build-container
+name: build container
 
 # Controls when the workflow will run
 on: 
@@ -6,6 +6,7 @@ on:
   push:
     branches:
       - 'master'
+      - 'workflow'
     tags:
       - 'v*.*.*'
   pull_request:
